[gd_scene load_steps=6 format=2]

[ext_resource path="res://TestBlocky.gd" type="Script" id=1]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameEnvironment.gd" type="Script" id=3]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.176471, 0.423529, 0.494118, 1 )

[node name="GameEnvironment" type="WorldEnvironment"]
script = ExtResource( 3 )

[node name="Camera" type="ClippedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.981477, 0.19158, 0, -0.19158, 0.981477, 0, 0.851247, 2.85258 )

[node name="TestBlocky" type="MeshInstance" parent="." groups=["persistent"]]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[connection signal="game_saved" from="PauseMenu" to="." method="_on_PauseMenu_game_saved"]
